<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleEdit"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/tv_update_title"
            android:textSize="25sp"/>



    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_task"
            android:textSize="25sp"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/edTaskName"
            android:layout_weight="0.90"
            android:onClick="onTaskName"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:id="@+id/swCompletion"
            android:textOn="完了"
            android:textOff="未完"
            android:checked="false"
            android:textSize="20sp"
            android:layout_weight="0.06" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/tv_limit"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/tvLimit"
            android:layout_weight="1.00"
            android:textSize="20sp"
            android:onClick="onChangeButtonClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_change"
            android:textSize="20dp"
            android:onClick="onChangeButtonClick"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/tv_detail"
        android:textSize="25sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/edDetail"
        android:layout_weight="1"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:onClick="onEditClick"/>



</LinearLayout>